--- a/paradox_alarm_interface_2/config.json
+++ b/paradox_alarm_interface_2/config.json
@@ -4,7 +4,7 @@
   "slug": "paradox_alarm_interface_2",
   "description": "Second instance. Supports SP/MG/EVO, Serial and IP150 connections.",
   "uart": true,
-  "url": "https://github.com/ParadoxAlarmInterface/pai",
+  "url": "https://github.com/DekadaD/pai",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "application",
   "boot": "auto",
