--- a/paradox_alarm_interface/config.json
+++ b/paradox_alarm_interface/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Paradox Alarm Interface (deprecated)",
+  "name": "Paradox Alarm Interface (deprecated) VR",
   "version": "2.7.1",
   "slug": "paradox_alarm_interface",
   "description": "Supports SP/MG/EVO, Serial and IP150 connections.",
