--- a/paradox_alarm_interface_3.x_second/config.json
+++ b/paradox_alarm_interface_3.x_second/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "Paradox Alarm Interface (Second Instance)",
+  "name": "Paradox Alarm Interface (Second Instance) VR",
   "version": "3.1.0",
-  "slug": "paradox_alarm_interface_3.x_second",
-  "description": "Second instance. Supports SP/MG/EVO, Serial and IP150 connections.",
+  "slug": "paradox_alarm_interface_3.x_second_vr",
+  "description": "Second instance. Supports SP/MG/EVO, Serial and IP150 connections. VR",
   "uart": true,
   "url": "https://github.com/DekadaD/pai",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
@@ -17,10 +17,10 @@
      "PAI_CONFIG_FILE": "/data/options.json"
   },
   "ports": {
-      "10000/tcp": 10000
+      "10000/tcp": 10001
   },
   "ports_description": {
-    "10000/tcp": "For IP connection from Babyware"
+    "10001/tcp": "For IP connection from Babyware"
   },
   "options": {
     "LOGGING_LEVEL_CONSOLE": 20,
@@ -208,5 +208,5 @@
     "DUMMY_EVENT_FILTERS": ["str?"]
   },
   "services": ["mqtt:want"],
-  "image": "paradoxalarminterface/pai"
+  "image": "paradoxalarminterface/pai2"
 }
