--- a/paradox_alarm_interface_3.x/config.json
+++ b/paradox_alarm_interface_3.x/config.json
@@ -1,7 +1,7 @@
 {
   "name": "Paradox Alarm Interface VR",
   "version": "3.1.0",
-  "slug": "paradox_alarm_interface_3.x",
+  "slug": "paradox_alarm_interface_3.x_VR",
   "description": "Supports SP/MG/EVO, Serial and IP150 connections.",
   "uart": true,
   "url": "https://github.com/DekadaD/pai",
